Created playing area and added styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,57 @@
   </head>
   <body>
     <p>Memory Game</p>
+    <div class="memory-game">
+        <div class="memory-card">
+            <img src="img/aurelia.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/angular.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+            
+        </div>
+        <div class="memory-card">            
+            <img src="img/backbone.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/ember.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/react.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/vue.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/aurelia.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/angular.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/backbone.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/ember.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/react.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+        <div class="memory-card">
+            <img src="img/vue.svg" alt="" class="front-face"></img>
+            <img src="img/js-badge.svg" alt="" class="back-face"></img>
+        </div>
+</div>
     <script src="index.js"></script>
   </body>
 </html>
